--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.4",
+    "@types/react": "^17.0.22",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-grid-layout": "^1.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.4.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
