--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
