--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-grid-layout": "^1.3.0",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "react-sizeme": "^3.0.2",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
