--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.4",
     "@types/react": "^17.0.22",
+    "@types/react-color": "^3.0.5",
     "@types/react-dom": "^17.0.9",
     "@types/react-grid-layout": "^1.1.2",
+    "install": "^0.13.0",
+    "javascript-color-gradient": "^1.3.2",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
     "react-player": "^2.9.0",
