--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/react-color": "^3.0.5",
     "@types/react-dom": "^17.0.9",
     "@types/react-grid-layout": "^1.1.2",
+    "@types/react-motion": "^0.0.31",
     "install": "^0.13.0",
     "javascript-color-gradient": "^1.3.2",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.0",
+    "react-motion": "^0.5.2",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "react-sizeme": "^3.0.2",
