--- a/package.json
+++ b/package.json
@@ -15,6 +15,20 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-grid-layout": "^1.1.2",
     "@types/react-motion": "^0.0.31",
+    "@syncfusion/ej2-react-richtexteditor": "^18.2.56",
+    "@syncfusion/ej2-base": "^18.2.55",
+    "@syncfusion/ej2-data": "^18.2.54",
+    "@syncfusion/ej2-documenteditor": "^18.3.42",
+    "@syncfusion/ej2-react-buttons": "^18.2.54",
+    "@syncfusion/ej2-react-calendars": "^18.2.56",
+    "@syncfusion/ej2-react-documenteditor": "^18.3.42",
+    "@syncfusion/ej2-react-dropdowns": "^18.2.56",
+    "@syncfusion/ej2-react-grids": "^18.2.56",
+    "@syncfusion/ej2-react-inputs": "^18.2.56",
+    "@syncfusion/ej2-react-navigations": "^18.3.35",
+    "@syncfusion/ej2-react-notifications": "^18.3.35",
+    "@syncfusion/ej2-react-popups": "^18.2.54",
+    "@syncfusion/ej2-react-splitbuttons": "^18.3.35",
     "install": "^0.13.0",
     "javascript-color-gradient": "^1.3.2",
     "react": "^17.0.2",
