--- a/package.json
+++ b/package.json
@@ -5,17 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.4",
-    "@types/react": "^17.0.22",
-    "@types/react-color": "^3.0.5",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-grid-layout": "^1.1.2",
-    "@types/react-motion": "^0.0.31",
-    "@syncfusion/ej2-react-richtexteditor": "^18.2.56",
     "@syncfusion/ej2-base": "^18.2.55",
     "@syncfusion/ej2-data": "^18.2.54",
     "@syncfusion/ej2-documenteditor": "^18.3.42",
@@ -28,7 +17,19 @@
     "@syncfusion/ej2-react-navigations": "^18.3.35",
     "@syncfusion/ej2-react-notifications": "^18.3.35",
     "@syncfusion/ej2-react-popups": "^18.2.54",
+    "@syncfusion/ej2-react-richtexteditor": "^18.2.56",
     "@syncfusion/ej2-react-splitbuttons": "^18.3.35",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.4",
+    "@types/react": "^17.0.22",
+    "@types/react-color": "^3.0.5",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-grid-layout": "^1.1.2",
+    "@types/react-motion": "^0.0.31",
+    "@types/react-tabs": "^2.3.3",
     "install": "^0.13.0",
     "javascript-color-gradient": "^1.3.2",
     "react": "^17.0.2",
@@ -39,6 +40,7 @@
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "react-sizeme": "^3.0.2",
+    "react-tabs": "^3.2.2",
     "typescript": "^4.4.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
