--- a/package.json
+++ b/package.json
@@ -5,17 +5,6 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.4",
-    "@types/react": "^17.0.22",
-    "@types/react-color": "^3.0.5",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-grid-layout": "^1.1.2",
-    "@types/react-motion": "^0.0.31",
-    "@syncfusion/ej2-react-richtexteditor": "^18.2.56",
     "@syncfusion/ej2-base": "^18.2.55",
     "@syncfusion/ej2-data": "^18.2.54",
     "@syncfusion/ej2-documenteditor": "^18.3.42",
@@ -28,9 +17,24 @@
     "@syncfusion/ej2-react-navigations": "^18.3.35",
     "@syncfusion/ej2-react-notifications": "^18.3.35",
     "@syncfusion/ej2-react-popups": "^18.2.54",
+    "@syncfusion/ej2-react-richtexteditor": "^18.2.56",
     "@syncfusion/ej2-react-splitbuttons": "^18.3.35",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.4",
+    "@types/react": "^17.0.22",
+    "@types/react-color": "^3.0.5",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-grid-layout": "^1.1.2",
+    "@types/react-motion": "^0.0.31",
+    "draft-js": "^0.11.7",
+    "draft-js-export-markdown": "^1.4.0",
+    "file-saver": "^2.0.2",
     "install": "^0.13.0",
     "javascript-color-gradient": "^1.3.2",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -66,5 +70,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/draft-js": "^0.11.5"
   }
 }
